--- a/app/src/main/res/layout/activity_islemler.xml
+++ b/app/src/main/res/layout/activity_islemler.xml
@@ -6,14 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".islemler">
 
-    <Button
-        android:id="@+id/back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="82dp"
-        android:onClick="come_back"
-        android:text="geri"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <ListView
+        android:id="@+id/listview_1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="1dp"
+        app:layout_constraintBottom_toBottomOf="@+id/listview_2"
+        app:layout_constraintEnd_toStartOf="@+id/listview_2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/listview_2" />
+
+    <ListView
+        android:id="@+id/listview_2"
+        android:layout_width="88dp"
+        android:layout_height="663dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="4dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/listview_1"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
